[package]
name = "tmod"
version = "0.1.0"

edition = "2024"
rust-version = "1.85"

license = "MIT OR Apache-2.0"
readme = "README.md"

repository = "https://github.com/TimNN/tmod"
documentation = "https://docs.rs/tmod"
homepage = "https://github.com/TimNN/tmod"

[lib]
proc-macro = true

[lints.clippy]
# --- Restrictions ---
self_named_module_files = "deny"

# --- Predantic ---
pedantic = { level = "warn", priority = -1 }

# More readable.
match_bool = "allow"
# Closures are frequently shorter than fully specfiying the type.
redundant_closure_for_method_calls = "allow"
