[package]
name = "transparent-mod"
version = "0.1.0"

edition = "2024"
rust-version = "1.85"

license = "MIT OR Apache-2.0"
readme = "README.md"

repository = "https://github.com/TimNN/transparent-mod"
documentation = "https://docs.rs/transparent-mod"
homepage = "https://github.com/TimNN/transparent-mod"

description = "Transparent Modules for Rust."
categories = ["development-tools"]

[lib]
proc-macro = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(outlined_unstable)"]

[lints.clippy]
# --- Restrictions ---
self_named_module_files = "deny"

# --- Predantic ---
pedantic = { level = "warn", priority = -1 }

# More readable.
match_bool = "allow"
# Closures are frequently shorter than fully specfiying the type.
redundant_closure_for_method_calls = "allow"
